Modern IDB: TransactionOperation objects leak
Created attachment 270961 [details] Patch v1
Attachment 270961 [details] did not pass style-queue: ERROR: Source/WebCore/Modules/indexeddb/client/TransactionOperation.h:104: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebCore/Modules/indexeddb/client/TransactionOperation.h:124: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Comment on attachment 270961 [details] Patch v1 Clearing flags on attachment: 270961 Committed r196349: <http://trac.webkit.org/changeset/196349>
All reviewed patches have been landed. Closing bug.
This change has cut the total amount of leaks on the leaks bot roughly in half. Nice!
(In reply to comment #5) > This change has cut the total amount of leaks on the leaks bot roughly in > half. Nice! 👍👏