Modern IDB: TransactionOperation objects leak. https://bugs.webkit.org/show_bug.cgi?id=154054

Reviewed by Alex Christensen.

No new tests (Currently untestable).

* Modules/indexeddb/client/IDBTransactionImpl.cpp:
(WebCore::IDBClient::IDBTransaction::abortOnServerAndCancelRequests): Remove the TransactionOperation from
  the map, as this operation doesn't complete "normally" like most others.
(WebCore::IDBClient::IDBTransaction::commitOnServer): Ditto.

* Modules/indexeddb/client/TransactionOperation.h:
(WebCore::IDBClient::TransactionOperation::perform): Clear the m_performFunction after use,
  as it holds a lambda that holds a RefPtr to the IDBTransaction, as well as a self-ref.
(WebCore::IDBClient::TransactionOperation::completed): Clear m_completeFunction for the same reasons.


Canonical link: https://commits.webkit.org/172164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196349 268f45cc-cd09-0410-ab3c-d52691b4dbfc